--- a/demo/index.html
+++ b/demo/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
     body {
+        height: 100%;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 </style>
@@ -14,7 +17,7 @@
 <body>
     <h3>Mystical</h3>
     <div>
-        <input type="text" id="notificationText" />
+        <input type="text" id="notificationText" value="Hello World" />
     </div>
     <button type="button" onclick="note1()">One</button>
     <button type="button" onclick="note2()">Two</button>
