--- a/demo/index.html
+++ b/demo/index.html
@@ -14,8 +14,8 @@
     <title>Mystical</title>
 </head>
 
-<body>
-    <h3>Mystical</h3>
+<body style="padding: 10px">
+    <h3 style="text-align: center">Mystical</h3>
     <div>
         <input type="text" id="notificationText" value="Hello World" />
     </div>
