--- a/demo/index.html
+++ b/demo/index.html
@@ -19,8 +19,15 @@
     <div>
         <input type="text" id="notificationText" value="Hello World" />
     </div>
-    <button type="button" onclick="note1()">One</button>
-    <button type="button" onclick="note2()">Two</button>
+    <button type="button" onclick="note1()">Confirm</button>
+    <button type="button" onclick="note2()">Custom Alert</button>
+
+    <button type="button" onclick="info()">Info</button>
+
+    <button type="button" onclick="success()">Success</button>
+    <button type="button" onclick="warning()">Warning</button>
+
+    <br>
 
 </body>
 
